--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernandez, Heaven</title>
+    <title>Fernandez, Heaven Ronelle A.</title>
 
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
